# Parte-1-RPI

./: README.md
GPIO/: Led.py  Led_PWM.py  Led_PWM_10.py  Led_PWM_50.py  Led_PWM_90.py  Servo.py  Servo_2.py
analog_io/: CMakeLists.txt  analog_io.c
button_test/: CMakeLists.txt  button_test.c
carrito/: CMakeLists.txt  carrito.c  carrito.c.save  carrito.c.save.1  carrito.c.save.2  carrito.c.save.3
control/: publish-socks.py  pwm.py  ser.py
test/: controlM1.py  echo.py
test/blink/: blink.arduino.avr.uno.elf  blink.arduino.avr.uno.hex  blink.arduino.avr.uno.with_bootloader.hex  blink.ino
test/comandos/: comandos.ino
test/echo/: echo.ino
test/motores/: motores.ino
test/motorizq/: motorizq.ino  motorizq.ino.standard.hex  motorizq.ino.with_bootloader.standard.hex
ultrasonico/: CMakeLists.txt  ultrasonico.c
webapp/: app.py
webapp/static/: estilo.css
webapp/static/js/: estilo.css  fucionesmqtt.js  mqttws31.js
webapp/templates/: control.html  cr1.html
